House Pricing Deep Feed Forward

--- a/House_Pricing_Regression_ANN.ipynb
+++ b/House_Pricing_Regression_ANN.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "House Pricing Regression ANN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMu1m6aOJDjsdEb77CazoaR",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -20,11 +19,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "CePttej8Uubt"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AnthonyAngatia/ML-Group-Final-Task/blob/main/House_Pricing_Regression_ANN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "# **Machine Learning Group Task 1**:Feature Selection & Regression using ANN\n",
+        "\n",
+        "## Group members\n",
+        "Harry Karani\n",
+        "\n",
+        "Stephanie Mboya\n",
+        "\n",
+        "Angatia Anthony"
       ]
     },
     {
